--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
           </ul>
         </div>
         <div class="galery">
-          <div id="g2" class="galery_page_shoot ggalery">
+          <div id="g2" class="galery_page_2 ggalery">
             <span>aa</span>
             <span>bb</span>
             <span>cc</span>
@@ -109,7 +109,7 @@
             <span>hh</span>
             <span>ii</span>
           </div>
-          <div id="g3" class="galery_page_makeup ggalery">
+          <div id="g3" class="galery_page_3 ggalery">
             <span>A</span>
             <span>B</span>
             <span>C</span>
@@ -120,7 +120,7 @@
             <span>H</span>
             <span>I</span>
           </div>
-          <div id="g4" class="galery_page_fromwork ggalery">
+          <div id="g4" class="galery_page_4 ggalery">
             <span>1</span>
             <span>2</span>
             <span>3</span>
@@ -131,7 +131,7 @@
             <span>8</span>
             <span>9</span>
           </div>
-          <div id="g1" class="galery_page_all  ggalery ggalery_default">
+          <div id="g1" class="galery_page_1  ggalery ggalery_default">
             <span>11</span>
             <span>12</span>
             <span>13</span>
