--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
       <img src="img/logo_270x50.png" alt="">
       <img src="img/Bez-nazwy-2a.png" alt="" class="altLogo">
     </aside>
-    <nav>
+    <div class="hamburger on">
+        <i class="icon-home"></i>
+    </div>
+    <nav class="on">
       <ul>
         <li><a href="#main">strona główna
             <i class="icon-home"></i>
@@ -781,9 +784,8 @@
     <div class="footer_allrights">
       © 2018 Wszystkie prawa zastrzeżone, AURORA Mobilny Gabinet Kosmeyczny
     </div>
-
-
   </footer>
+  <script src="scripts/script.js" ></script>
 </body>
 
 </html>
