--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       <img src="img/logo_270x50.png" alt="">
       <img src="img/Bez-nazwy-2a.png" alt="" class="altLogo">
     </aside>
-    <div class="hamburger on">
-        <i class="icon-home"></i>
+    <div class="hamburger off">
+        <i class="icon-angle-double-down"></i>
     </div>
-    <nav class="on">
+    <nav class="off">
       <ul>
         <li><a href="#main">strona główna
             <i class="icon-home"></i>
