--- a/demo.html
+++ b/demo.html
@@ -229,11 +229,11 @@ body {
 }
 @font-face {
       font-family: 'fontello';
-      src: url('./font/fontello.eot?36024697');
-      src: url('./font/fontello.eot?36024697#iefix') format('embedded-opentype'),
-           url('./font/fontello.woff?36024697') format('woff'),
-           url('./font/fontello.ttf?36024697') format('truetype'),
-           url('./font/fontello.svg?36024697#fontello') format('svg');
+      src: url('./font/fontello.eot?97200814');
+      src: url('./font/fontello.eot?97200814#iefix') format('embedded-opentype'),
+           url('./font/fontello.woff?97200814') format('woff'),
+           url('./font/fontello.ttf?97200814') format('truetype'),
+           url('./font/fontello.svg?97200814#fontello') format('svg');
       font-weight: normal;
       font-style: normal;
     }
@@ -306,10 +306,11 @@ body {
       <div class="row">
         <div class="the-icons span3" title="Code: 0xe804"><i class="demo-icon icon-basket">&#xe804;</i> <span class="i-name">icon-basket</span><span class="i-code">0xe804</span></div>
         <div class="the-icons span3" title="Code: 0xf0e0"><i class="demo-icon icon-mail-alt">&#xf0e0;</i> <span class="i-name">icon-mail-alt</span><span class="i-code">0xf0e0</span></div>
+        <div class="the-icons span3" title="Code: 0xf103"><i class="demo-icon icon-angle-double-down">&#xf103;</i> <span class="i-name">icon-angle-double-down</span><span class="i-code">0xf103</span></div>
         <div class="the-icons span3" title="Code: 0xf155"><i class="demo-icon icon-dollar">&#xf155;</i> <span class="i-name">icon-dollar</span><span class="i-code">0xf155</span></div>
-        <div class="the-icons span3" title="Code: 0xf230"><i class="demo-icon icon-facebook-official">&#xf230;</i> <span class="i-name">icon-facebook-official</span><span class="i-code">0xf230</span></div>
       </div>
       <div class="row">
+        <div class="the-icons span3" title="Code: 0xf230"><i class="demo-icon icon-facebook-official">&#xf230;</i> <span class="i-name">icon-facebook-official</span><span class="i-code">0xf230</span></div>
         <div class="the-icons span3" title="Code: 0xf295"><i class="demo-icon icon-percent">&#xf295;</i> <span class="i-name">icon-percent</span><span class="i-code">0xf295</span></div>
       </div>
     </div>
