--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
   <meta charset="UTF-8">
@@ -47,7 +47,8 @@
 
   <section>
     <div class="main_wraper">
-      <img src="img/1500x1500.png" alt="">
+      <!-- <img src="img/1500x1500.png" alt=""> -->
+      <span class="main_img"></span>
       <div></div>
       <div class="main_wraper_text">
         <h1>
