--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -18,10 +18,10 @@
       <img src="img/logo_270x50.png" alt="">
       <img src="img/Bez-nazwy-2a.png" alt="" class="altLogo">
     </aside>
-    <div class="hamburger off">
+    <div class="hamburger">
         <i class="icon-angle-double-down"></i>
     </div>
-    <nav class="off">
+    <nav class="">
       <ul>
         <li><a href="#main">strona główna
             <i class="icon-home"></i>
@@ -49,7 +49,6 @@
     <div class="main_wraper">
       <!-- <img src="img/1500x1500.png" alt=""> -->
       <span class="main_img"></span>
-      <div></div>
       <div class="main_wraper_text">
         <h1>
           <span>MOBILNY</span>
@@ -775,11 +774,14 @@
         Chcesz o coś zapytać? Masz jakieś wątpliwości?<br>
         Może chcesz po prostu porozmawiać? <br>Napisz do mnie:
         <div>
-          <a href="https://www.facebook.com/m.g.k.aurora/" alt_title="https://www.facebook.com/m.g.k.aurora/"> <i
-              class="icon-facebook-official"></i></a>
+          <a href="https://www.facebook.com/m.g.k.aurora/" alt_title="https://www.facebook.com/m.g.k.aurora/"><i class="icon-facebook-official"></i></a>
           <a href="796306342" alt_title="796306342"> <i class="icon-phone"></i></a>
           <a href="#" alt_title="aurora.gabinet@op.pl"> <i class="icon-mail-alt"></i></a>
         </div>
+        <div class="footer_email_phone">
+          <a href="https://www.facebook.com/m.g.k.aurora/">  <i class="icon-facebook-official"></i>m.g.k.aurora</a>
+          <a href="796306342" > <i class="icon-phone"></i>796306342</a>
+          <a href="#"> <i class="icon-mail-alt"></i>aurora.gabinet@op.pl</a>
       </div>
     </div>
     <div class="footer_allrights">
