--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pl">
 
 <head>
   <meta charset="UTF-8">
@@ -60,7 +60,7 @@
     <div id="about_me">
       <div class="about_me_wraper">
         <div class="about_me_main">
-          <p>o mnie</p>
+          <h2>o mnie</h2>
         </div>
         <div class="about_me_img">
           <img src="img/about_me_img.png" alt="">
@@ -86,7 +86,7 @@
     <div id="galery">
       <div class="galery_wraper">
         <div class="galery_main">
-          <p>galeria</p>
+          <h2>galeria</h2>
           <ul>
             <li><a href="#g1">WSZYSTKIE
               </a></li>
@@ -247,7 +247,7 @@
               <i class="icon-clock">60min</i>
               <i class="icon-dollar">100zł</i>
             </span>
-            <span>
+            <!-- <span>
               <h1></h1>
               <i class="icon-clock"></i>
               <i class="icon-dollar"></i>
@@ -271,7 +271,7 @@
               <h1></h1>
               <i class="icon-clock"></i>
               <i class="icon-dollar"></i>
-            </span>
+            </span> -->
           </div>
           <div id="s4" class="serwises_page_4 sgalery">
             <h1>Zabiegi złuszczająco-oczyszczające</h1>
@@ -390,26 +390,26 @@
               <i class="icon-clock">20min</i>
               <i class="icon-dollar">40zł</i>
             </span>
-            <span>
-              <!-- <h1></h1>
+            <!-- <span>
+              <h1></h1>
               <i class="icon-clock"></i>
-              <i class="icon-dollar"></i> -->
+              <i class="icon-dollar"></i>
             </span>
             <span>
-              <!-- <h1></h1>
+              <h1></h1>
               <i class="icon-clock"></i>
-              <i class="icon-dollar"></i> -->
+              <i class="icon-dollar"></i>
             </span>
             <span>
-              <!-- <h1></h1>
+              <h1></h1>
               <i class="icon-clock"></i>
-              <i class="icon-dollar"></i> -->
+              <i class="icon-dollar"></i>
             </span>
             <span>
-              <!-- <h1></h1>
+              <h1></h1>
               <i class="icon-clock"></i>
-              <i class="icon-dollar"></i> -->
-            </span>
+              <i class="icon-dollar"></i>
+            </span> -->
           </div>
           <div id="s6" class="serwises_page_6 sgalery">
             <h1>PIELĘGNACJA STÓP I PAZNOKCI</h1>
@@ -435,31 +435,31 @@
               <i class="icon-clock">45min</i>
               <i class="icon-dollar">50zł</i>
             </span>
-            <span>
-              <!-- <h1></h1>
+            <!-- <span>
+              <h1></h1>
               <i class="icon-clock"></i>
-              <i class="icon-dollar"></i> -->
+              <i class="icon-dollar"></i>
             </span>
             <span>
-              <!-- <h1></h1>
+              <h1></h1>
               <i class="icon-clock"></i>
-              <i class="icon-dollar"></i> -->
+              <i class="icon-dollar"></i>
             </span>
             <span>
-              <!-- <h1></h1>
+              <h1></h1>
               <i class="icon-clock"></i>
-              <i class="icon-dollar"></i> -->
+              <i class="icon-dollar"></i>
             </span>
             <span>
-              <!-- <h1></h1>
+              <h1></h1>
               <i class="icon-clock"></i>
-              <i class="icon-dollar"></i> -->
+              <i class="icon-dollar"></i>
             </span>
             <span>
-              <!-- <h1></h1>
+              <h1></h1>
               <i class="icon-clock"></i>
-              <i class="icon-dollar"></i> -->
-            </span>
+              <i class="icon-dollar"></i>
+            </span> -->
           </div>
           <div id="s7" class="serwises_page_7 sgalery">
             <h1>MAKIJAŻ</h1>
@@ -500,16 +500,16 @@
               <i class="icon-clock">15min</i>
               <i class="icon-dollar">30zł</i>
             </span>
-            <span>
-              <!-- <h1></h1>
+            <!-- <span>
+              <h1></h1>
               <i class="icon-clock"></i>
-              <i class="icon-dollar"></i> -->
+              <i class="icon-dollar"></i>
             </span>
             <span>
-              <!-- <h1></h1>
+              <h1></h1>
               <i class="icon-clock"></i>
-              <i class="icon-dollar"></i> -->
-            </span>
+              <i class="icon-dollar"></i>
+            </span> -->
           </div>
           <div id="s1" class="serwises_page_1 sgalery_default">
             <h1>Zabiegi odżywcze, przeciwzmarszczkowe</h1>
@@ -570,15 +570,15 @@
               <i class="icon-clock">60 - 90min</i>
               <i class="icon-dollar">100 - 140zł</i>
             </span>
+            <!-- <span></span>
             <span></span>
-            <span></span>
-            <span></span>
+            <span></span> -->
 
           </div>
         </div>
         <div class="serwises_main">
     
-          <p>usługi</p>
+          <h2>usługi</h2>
           <ul>
             <li><a href="#s1">Zabiegi odżywcze, przeciwzmarszczkowe
               </a></li>
@@ -602,7 +602,7 @@
     <div id="price">
       <div class="price_wraper">
         <div class="price_main">
-          <p>cennik</p>
+          <h2>cennik</h2>
           <ul>
             <li><a href="#p1">Zabiegi odżywcze, przeciwzmarszczkowe
               </a></li>
@@ -784,6 +784,7 @@
           <a href="#"> <i class="icon-mail-alt"></i>aurora.gabinet@op.pl</a>
       </div>
     </div>
+  </div>
     <div class="footer_allrights">
       © 2018 Wszystkie prawa zastrzeżone, AURORA Mobilny Gabinet Kosmeyczny
     </div>
