--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8">
@@ -15,6 +15,7 @@
 <body id="main">
   <main>
     <aside>
+
       <img src="img/logo_270x50.png" alt="">
       <img src="img/Bez-nazwy-2a.png" alt="" class="altLogo">
     </aside>
@@ -23,22 +24,22 @@
     </div>
     <nav class="">
       <ul>
-        <li><a href="#main">strona główna
+        <li><a href="#main" >strona główna
             <i class="icon-home"></i>
           </a></li>
-        <li><a href="#about_me">o mnie
+        <li><a href="#about_me" >o mnie
             <i class="icon-camera"></i>
           </a></li>
-        <li><a href="#galery">galeria
+        <li><a href="#galery" >galeria
             <i class="icon-dollar"></i>
           </a></li>
-        <li><a href="#serwises">usługi
+        <li><a href="#serwises" >usługi
             <i class="icon-percent"></i>
           </a></li>
-        <li><a href="#price">cennik
+        <li><a href="#price" >cennik
             <i class="icon-phone"></i>
           </a></li>
-        <li><a href="#footer">kontakt
+        <li><a href="#footer" >kontakt
             <i class="icon-phone"></i>
           </a></li>
       </ul>
