--- a/index.html
+++ b/index.html
@@ -24,22 +24,22 @@
     </div>
     <nav class="">
       <ul>
-        <li><a href="#main" >strona główna
+        <li><a href="#main" class="anchor">strona główna
             <i class="icon-home"></i>
           </a></li>
-        <li><a href="#about_me" >o mnie
+        <li><a href="#about_me" class="anchor">o mnie
             <i class="icon-camera"></i>
           </a></li>
-        <li><a href="#galery" >galeria
+        <li><a href="#galery" class="anchor">galeria
             <i class="icon-dollar"></i>
           </a></li>
-        <li><a href="#serwises" >usługi
+        <li><a href="#serwises" class="anchor">usługi
             <i class="icon-percent"></i>
           </a></li>
-        <li><a href="#price" >cennik
+        <li><a href="#price" class="anchor">cennik
             <i class="icon-phone"></i>
           </a></li>
-        <li><a href="#footer" >kontakt
+        <li><a href="#footer" class="anchor">kontakt
             <i class="icon-phone"></i>
           </a></li>
       </ul>
@@ -623,7 +623,9 @@
         </div>
         <div class="price">
           <div id="p2" class="price_page_2 pgalery">
-              <span class="price_left"><i>60 zł</i>
+              <span class="price_left">
+              <a>NAJTAŃSZE W KATEGORII:</a> 
+              <i>60 zł</i>
              <a>MASAŻ KLASYCZNY TWARZY, SZYI I DEKOLTU</a> 
             </span>
             <span class="price_right">
@@ -642,7 +644,9 @@
             </span>
           </div>
           <div id="p3" class="price_page_3 pgalery">
-              <span class="price_left"><i>100 zł</i>
+              <span class="price_left">
+              <a>NAJTAŃSZE W KATEGORII:</a>
+              <i>100 zł</i>
              <a>REACTIF bez masażu<br>
               ACNE LOGIQUE<br>
               SYN BIOTICbez masażu</a> 
@@ -660,7 +664,9 @@
             </span>
           </div>
           <div id="p4" class="price_page_4 pgalery">
-            <span class="price_left"> <i>40 zł</i>
+            <span class="price_left">
+                <a>NAJTAŃSZE W KATEGORII:</a>
+              <i>40 zł</i>
               <a>PEELING KAWITACYJNY</a>
             </span>
             <span class="price_right">
@@ -681,7 +687,9 @@
             </span>
           </div>
           <div id="p5" class="price_page_5 pgalery">
-              <span class="price_left"> <i>30 zł</i>
+              <span class="price_left"> 
+                  <a>NAJTAŃSZE W KATEGORII :</a>
+                <i>30 zł</i>
             <a>MANICURE BIOLOGICZNY<br>
               PARAFINA NA DŁONIE + PEELING DŁONI</a>  
             </span>
@@ -696,7 +704,9 @@
             </span>
           </div>
           <div id="p6" class="price_page_6 pgalery">
-              <span class="price_left"><i>50 zł</i>
+              <span class="price_left">
+                  <a>NAJTAŃSZE W KATEGORII:</a>
+                <i>50 zł</i>
                <a>HYBRYDA PAZNOKCI STÓP</a>
             </span>
             <span class="price_right">
@@ -709,7 +719,9 @@
             </span>
           </div>
           <div id="p7" class="price_page_7 pgalery">
-              <span class="price_left">  <i>30 zł</i>
+              <span class="price_left">  
+                  <a>NAJTAŃSZE W KATEGORII:</a>
+                <i>30 zł</i>
               <a>MAKIJAŻ BIZNESOWY</a>
             </span>
             <span class="price_right">
@@ -725,7 +737,9 @@
             </span>
           </div>
           <div id="p1" class="price_page_1 pgalery_default">
-              <span class="price_left"><i>100 zł</i>
+              <span class="price_left">
+                  <a>NAJTAŃSZE W KATEGORII:</a>
+                <i>100 zł</i>
              <a>AQUASTIC bez masażu</a> 
             </span>
             <span class="price_right">
