--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>AURORA Mobilny Gabinet Kosmeyczny</title>
   <link rel="stylesheet" href="css/fontello.css" type="text/css" />
-  <link rel="stylesheet" href="css/style.css" type="text/css" />
+  <link rel="stylesheet" href="css/style_main.css" type="text/css" />
+  <link rel="stylesheet" href="css/style_nav.css" type="text/css" />
+  <link rel="stylesheet" href="css/style_about_me.css" type="text/css" />
+  <link rel="stylesheet" href="css/style_galery.css" type="text/css" />
+  <link rel="stylesheet" href="css/style_services.css" type="text/css" />
+  <link rel="stylesheet" href="css/style_price.css" type="text/css" />
+  <link rel="stylesheet" href="css/style_footer.css" type="text/css" />
   <link href="https://fonts.googleapis.com/css?family=Rajdhani&display=swap&subset=latin-ext" rel="stylesheet">
   <style>
   </style>
@@ -48,8 +54,8 @@
 
   <section>
     <div class="main_wraper">
-      <!-- <img src="img/1500x1500.png" alt=""> -->
-      <span class="main_img"></span>
+ 
+      <span class="main_img">     <img src="img/5a.jpg" alt=""></span>
       <div class="main_wraper_text">
         <h1>
           <span>MOBILNY</span>
@@ -101,48 +107,48 @@
         </div>
         <div class="galery">
           <div id="g2" class="galery_page_2 ggalery">
-            <span>aa</span>
-            <span>bb</span>
-            <span>cc</span>
-            <span>dd</span>
-            <span>ee</span>
-            <span>ff</span>
-            <span>gg</span>
-            <span>hh</span>
-            <span>ii</span>
+            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
+            <span class="tiler"><img src="img/sesje_2.jpg" alt=""></span>
+            <span class="tiler"><img src="img/sesje_3.jpg" alt=""></span>
+            <span class="tiler"><img src="img/sesje_4.jpg" alt=""></span>
+            <span class="tiler"><img src="img/sesje_5.jpg" alt=""></span>
+            <span class="tiler"><img src="img/sesje_6.jpg" alt=""></span>
+            <span class="tiler"><img src="img/sesje_7.jpg" alt=""></span>
+            <span class="tiler"><img src="img/sesje_8.jpg" alt=""></span>
+            <span class="tiler"><img src="img/sesje_9.jpg" alt=""></span>
           </div>
           <div id="g3" class="galery_page_3 ggalery">
-            <span>A</span>
-            <span>B</span>
-            <span>C</span>
-            <span>D</span>
-            <span>E</span>
-            <span>F</span>
-            <span>G</span>
-            <span>H</span>
-            <span>I</span>
+            <span class="tiler"><img src="img/makijaze_1.jpg" alt=""></span>
+            <span class="tiler"><img src="img/makijaze_2.jpg" alt=""></span>
+            <span class="tiler"><img src="img/makijaze_3.jpg" alt=""></span>
+            <span class="tiler"><img src="img/makijaze_4.jpg" alt=""></span>
+            <span class="tiler"><img src="img/makijaze_5.jpg" alt=""></span>
+            <span class="tiler"><img src="img/makijaze_6.jpg" alt=""></span>
+            <span class="tiler"><img src="img/makijaze_7.jpg" alt=""></span>
+            <span class="tiler"><img src="img/makijaze_8.jpg" alt=""></span>
+            <span class="tiler"><img src="img/makijaze_9.jpg" alt=""></span>
           </div>
           <div id="g4" class="galery_page_4 ggalery">
-            <span>1</span>
-            <span>2</span>
-            <span>3</span>
-            <span>4</span>
-            <span>5</span>
-            <span>6</span>
-            <span>7</span>
-            <span>8</span>
-            <span>9</span>
+            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
+            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
+            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
+            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
+            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
+            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
+            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
+            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
+            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
           </div>
           <div id="g1" class="galery_page_1  ggalery ggalery_default">
-            <span>11</span>
-            <span>12</span>
-            <span>13</span>
-            <span>14</span>
-            <span>15</span>
-            <span>16</span>
-            <span>17</span>
-            <span>18</span>
-            <span>19</span>
+            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
+            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
+            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
+            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
+            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
+            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
+            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
+            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
+            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
           </div>
         </div>
       </div>
