--- a/index.html
+++ b/index.html
@@ -55,7 +55,12 @@
   <section>
     <div class="main_wraper">
  
-      <span class="main_img">     <img src="img/5a.jpg" alt=""></span>
+    <span class="main_img">
+      <img class="main_pic0" src="img/main0.jpg" alt="">
+       <img class="main_pic1" src="img/main1.jpg" alt="">
+       <img class="main_pic2" src="img/main2.jpg" alt="">
+       <img class="main_pic3" src="img/main3.jpg" alt="">
+    </span>
       <div class="main_wraper_text">
         <h1>
           <span>MOBILNY</span>
@@ -107,7 +112,7 @@
         </div>
         <div class="galery">
           <div id="g2" class="galery_page_2 ggalery">
-            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
+            <span class="tiler"><img src="img/sesje_1.jpg" alt=""></span>
             <span class="tiler"><img src="img/sesje_2.jpg" alt=""></span>
             <span class="tiler"><img src="img/sesje_3.jpg" alt=""></span>
             <span class="tiler"><img src="img/sesje_4.jpg" alt=""></span>
@@ -140,15 +145,15 @@
             <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
           </div>
           <div id="g1" class="galery_page_1  ggalery ggalery_default">
-            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
-            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
-            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
-            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
-            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
-            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
-            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
-            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
-            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
+            <span class="tiler"><img src="img/praca_1.jpg" alt=""></span>
+            <span class="tiler"><img src="img/praca_2.jpg" alt=""></span>
+            <span class="tiler"><img src="img/praca_3.jpg" alt=""></span>
+            <span class="tiler"><img src="img/praca_4.jpg" alt=""></span>
+            <span class="tiler"><img src="img/praca_5.jpg" alt=""></span>
+            <span class="tiler"><img src="img/praca_6.jpg" alt=""></span>
+            <span class="tiler"><img src="img/praca_7.jpg" alt=""></span>
+            <span class="tiler"><img src="img/praca_8.jpg" alt=""></span>
+            <span class="tiler"><img src="img/praca_9.jpg" alt=""></span>
           </div>
         </div>
       </div>
