--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <style>
   </style>
 </head>
+ 
+
+
 
 <body id="main">
   <main>
@@ -75,7 +78,7 @@
           <h2>o mnie</h2>
         </div>
         <div class="about_me_img">
-          <img src="img/about_me_img.png" alt="">
+          <img src="img/about_me_img.jpg" alt="">
         </div>
         <div class="about_me_txt">
           <h1>O MNIE
@@ -100,60 +103,60 @@
         <div class="galery_main">
           <h2>galeria</h2>
           <ul>
-            <li><a href="#g1">WSZYSTKIE
+            <li><a href="#g1">ZABIEGI I
               </a></li>
-            <li><a href="#g2">SESJE
+            <li><a href="#g2">ZABIEGI II
               </a></li>
-            <li><a href="#g3">MAKIJAŻE
+            <li><a href="#g3">SESJE
               </a></li>
-            <li><a href="#g4">ZABIEGI
+            <li><a href="#g4">MAKIJAŻE
               </a></li>
           </ul>
         </div>
         <div class="galery">
           <div id="g2" class="galery_page_2 ggalery">
-            <span class="tiler"><img src="img/sesje_1.jpg" alt=""></span>
-            <span class="tiler"><img src="img/sesje_2.jpg" alt=""></span>
-            <span class="tiler"><img src="img/sesje_3.jpg" alt=""></span>
-            <span class="tiler"><img src="img/sesje_4.jpg" alt=""></span>
-            <span class="tiler"><img src="img/sesje_5.jpg" alt=""></span>
-            <span class="tiler"><img src="img/sesje_6.jpg" alt=""></span>
-            <span class="tiler"><img src="img/sesje_7.jpg" alt=""></span>
-            <span class="tiler"><img src="img/sesje_8.jpg" alt=""></span>
-            <span class="tiler"><img src="img/sesje_9.jpg" alt=""></span>
+            <span class="tiler"><img src="img/zabiegi/1.jpg" alt=""></span>
+            <span class="tiler"><img src="img/zabiegi/2.jpg" alt=""></span>
+            <span class="tiler"><img src="img/zabiegi/3.jpg" alt=""></span>
+            <span class="tiler"><img src="img/zabiegi/4.jpg" alt=""></span>
+            <span class="tiler"><img src="img/zabiegi/5.jpg" alt=""></span>
+            <span class="tiler"><img src="img/zabiegi/6.jpg" alt=""></span>
+            <span class="tiler"><img src="img/zabiegi/7.jpg" alt=""></span>
+            <span class="tiler"><img src="img/zabiegi/8.jpg" alt=""></span>
+            <span class="tiler"><img src="img/zabiegi/9.jpg" alt=""></span>
           </div>
           <div id="g3" class="galery_page_3 ggalery">
-            <span class="tiler"><img src="img/makijaze_1.jpg" alt=""></span>
-            <span class="tiler"><img src="img/makijaze_2.jpg" alt=""></span>
-            <span class="tiler"><img src="img/makijaze_3.jpg" alt=""></span>
-            <span class="tiler"><img src="img/makijaze_4.jpg" alt=""></span>
-            <span class="tiler"><img src="img/makijaze_5.jpg" alt=""></span>
-            <span class="tiler"><img src="img/makijaze_6.jpg" alt=""></span>
-            <span class="tiler"><img src="img/makijaze_7.jpg" alt=""></span>
-            <span class="tiler"><img src="img/makijaze_8.jpg" alt=""></span>
-            <span class="tiler"><img src="img/makijaze_9.jpg" alt=""></span>
+            <span class="tiler"><img src="img/makijaze/1.jpg" alt=""></span>
+            <span class="tiler"><img src="img/makijaze/2.jpg" alt=""></span>
+            <span class="tiler"><img src="img/makijaze/3.jpg" alt=""></span>
+            <span class="tiler"><img src="img/makijaze/4.jpg" alt=""></span>
+            <span class="tiler"><img src="img/makijaze/5.jpg" alt=""></span>
+            <span class="tiler"><img src="img/makijaze/6.jpg" alt=""></span>
+            <span class="tiler"><img src="img/makijaze/7.jpg" alt=""></span>
+            <span class="tiler"><img src="img/makijaze/8.jpg" alt=""></span>
+            <span class="tiler"><img src="img/makijaze/9.jpg" alt=""></span>
           </div>
           <div id="g4" class="galery_page_4 ggalery">
-            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
-            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
-            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
-            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
-            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
-            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
-            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
-            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
-            <span class="tiler"><img src="img/sesje_1a.jpg" alt=""></span>
+            <span class="tiler"><img src="img/sesje/1.jpg" alt=""></span>
+            <span class="tiler"><img src="img/sesje/2.jpg" alt=""></span>
+            <span class="tiler"><img src="img/sesje/3.jpg" alt=""></span>
+            <span class="tiler"><img src="img/sesje/4.jpg" alt=""></span>
+            <span class="tiler"><img src="img/sesje/5.jpg" alt=""></span>
+            <span class="tiler"><img src="img/sesje/6.jpg" alt=""></span>
+            <span class="tiler"><img src="img/sesje/7.jpg" alt=""></span>
+            <span class="tiler"><img src="img/sesje/8.jpg" alt=""></span>
+            <span class="tiler"><img src="img/sesje/9.jpg" alt=""></span>
           </div>
           <div id="g1" class="galery_page_1  ggalery ggalery_default">
-            <span class="tiler"><img src="img/praca_1.jpg" alt=""></span>
-            <span class="tiler"><img src="img/praca_2.jpg" alt=""></span>
-            <span class="tiler"><img src="img/praca_3.jpg" alt=""></span>
-            <span class="tiler"><img src="img/praca_4.jpg" alt=""></span>
-            <span class="tiler"><img src="img/praca_5.jpg" alt=""></span>
-            <span class="tiler"><img src="img/praca_6.jpg" alt=""></span>
-            <span class="tiler"><img src="img/praca_7.jpg" alt=""></span>
-            <span class="tiler"><img src="img/praca_8.jpg" alt=""></span>
-            <span class="tiler"><img src="img/praca_9.jpg" alt=""></span>
+            <span class="tiler"><img src="img/zabiegi2/1.jpg" alt=""></span>
+            <span class="tiler"><img src="img/zabiegi2/2.jpg" alt=""></span>
+            <span class="tiler"><img src="img/zabiegi2/3.jpg" alt=""></span>
+            <span class="tiler"><img src="img/zabiegi2/4.jpg" alt=""></span>
+            <span class="tiler"><img src="img/zabiegi2/5.jpg" alt=""></span>
+            <span class="tiler"><img src="img/zabiegi2/6.jpg" alt=""></span>
+            <span class="tiler"><img src="img/zabiegi2/7.jpg" alt=""></span>
+            <span class="tiler"><img src="img/zabiegi2/8.jpg" alt=""></span>
+            <span class="tiler"><img src="img/zabiegi2/9.jpg" alt=""></span>
           </div>
         </div>
       </div>
