--- a/index.html
+++ b/index.html
@@ -115,48 +115,50 @@
         </div>
         <div class="galery">
           <div id="g2" class="galery_page_2 ggalery">
-            <span class="tiler"><img src="img/zabiegi/1.jpg" alt=""></span>
-            <span class="tiler"><img src="img/zabiegi/2.jpg" alt=""></span>
-            <span class="tiler"><img src="img/zabiegi/3.jpg" alt=""></span>
-            <span class="tiler"><img src="img/zabiegi/4.jpg" alt=""></span>
-            <span class="tiler"><img src="img/zabiegi/5.jpg" alt=""></span>
-            <span class="tiler"><img src="img/zabiegi/6.jpg" alt=""></span>
-            <span class="tiler"><img src="img/zabiegi/7.jpg" alt=""></span>
-            <span class="tiler"><img src="img/zabiegi/8.jpg" alt=""></span>
-            <span class="tiler"><img src="img/zabiegi/9.jpg" alt=""></span>
+            <span class="galeryPictures"><img src="img/zabiegi/1.jpg"  alt=""></span>
+            <span class="galeryPictures"><img src="img/zabiegi/2.jpg" alt=""></span>
+            <span class="galeryPictures"><img src="img/zabiegi/3.jpg" alt=""></span>
+            <span class="galeryPictures"><img src="img/zabiegi/4.jpg" alt=""></span>
+            <span class="galeryPictures"><img src="img/zabiegi/5.jpg" alt=""></span>
+            <span class="galeryPictures"><img src="img/zabiegi/6.jpg" alt=""></span>
+            <span class="galeryPictures"><img src="img/zabiegi/7.jpg" alt=""></span>
+            <span class="galeryPictures"><img src="img/zabiegi/8.jpg" alt=""></span>
+            <span class="galeryPictures"><img src="img/zabiegi/9.jpg" alt=""></span>
           </div>
           <div id="g3" class="galery_page_3 ggalery">
-            <span class="tiler"><img src="img/makijaze/1.jpg" alt=""></span>
-            <span class="tiler"><img src="img/makijaze/2.jpg" alt=""></span>
-            <span class="tiler"><img src="img/makijaze/3.jpg" alt=""></span>
-            <span class="tiler"><img src="img/makijaze/4.jpg" alt=""></span>
-            <span class="tiler"><img src="img/makijaze/5.jpg" alt=""></span>
-            <span class="tiler"><img src="img/makijaze/6.jpg" alt=""></span>
-            <span class="tiler"><img src="img/makijaze/7.jpg" alt=""></span>
-            <span class="tiler"><img src="img/makijaze/8.jpg" alt=""></span>
-            <span class="tiler"><img src="img/makijaze/9.jpg" alt=""></span>
+            <span class="galeryPictures"><img src="img/makijaze/1.jpg" alt=""></span>
+            <span class="galeryPictures"><img src="img/makijaze/2.jpg" alt=""></span>
+            <span class="galeryPictures"><img src="img/makijaze/3.jpg" alt=""></span>
+            <span class="galeryPictures"><img src="img/makijaze/4.jpg" alt=""></span>
+            <span class="galeryPictures"><img src="img/makijaze/5.jpg" alt=""></span>
+            <span class="galeryPictures"><img src="img/makijaze/6.jpg" alt=""></span>
+            <span class="galeryPictures"><img src="img/makijaze/7.jpg" alt=""></span>
+            <span class="galeryPictures"><img src="img/makijaze/8.jpg" alt=""></span>
+            <span class="galeryPictures"><img src="img/makijaze/9.jpg" alt=""></span>
           </div>
           <div id="g4" class="galery_page_4 ggalery">
-            <span class="tiler"><img src="img/sesje/1.jpg" alt=""></span>
-            <span class="tiler"><img src="img/sesje/2.jpg" alt=""></span>
-            <span class="tiler"><img src="img/sesje/3.jpg" alt=""></span>
-            <span class="tiler"><img src="img/sesje/4.jpg" alt=""></span>
-            <span class="tiler"><img src="img/sesje/5.jpg" alt=""></span>
-            <span class="tiler"><img src="img/sesje/6.jpg" alt=""></span>
-            <span class="tiler"><img src="img/sesje/7.jpg" alt=""></span>
-            <span class="tiler"><img src="img/sesje/8.jpg" alt=""></span>
-            <span class="tiler"><img src="img/sesje/9.jpg" alt=""></span>
+            <span class="galeryPictures"><img src="img/sesje/1.jpg" alt=""></span>
+            <span class="galeryPictures"><img src="img/sesje/2.jpg" alt=""></span>
+            <span class="galeryPictures"><img src="img/sesje/3.jpg" alt=""></span>
+            <span class="galeryPictures"><img src="img/sesje/4.jpg" alt=""></span>
+            <span class="galeryPictures"><img src="img/sesje/5.jpg" alt=""></span>
+            <span class="galeryPictures"><img src="img/sesje/6.jpg" alt=""></span>
+            <span class="galeryPictures"><img src="img/sesje/7.jpg" alt=""></span>
+            <span class="galeryPictures"><img src="img/sesje/8.jpg" alt=""></span>
+            <span class="galeryPictures"><img src="img/sesje/9.jpg" alt=""></span>
+            
           </div>
           <div id="g1" class="galery_page_1  ggalery ggalery_default">
-            <span class="tiler"><img src="img/zabiegi2/1.jpg" alt=""></span>
-            <span class="tiler"><img src="img/zabiegi2/2.jpg" alt=""></span>
-            <span class="tiler"><img src="img/zabiegi2/3.jpg" alt=""></span>
-            <span class="tiler"><img src="img/zabiegi2/4.jpg" alt=""></span>
-            <span class="tiler"><img src="img/zabiegi2/5.jpg" alt=""></span>
-            <span class="tiler"><img src="img/zabiegi2/6.jpg" alt=""></span>
-            <span class="tiler"><img src="img/zabiegi2/7.jpg" alt=""></span>
-            <span class="tiler"><img src="img/zabiegi2/8.jpg" alt=""></span>
-            <span class="tiler"><img src="img/zabiegi2/9.jpg" alt=""></span>
+            <span class="galeryPictures"><img src="img/zabiegi2/1.jpg" alt=""></span>
+            <span class="galeryPictures"><img src="img/zabiegi2/2.jpg" alt=""></span>
+            <span class="galeryPictures"><img src="img/zabiegi2/3.jpg" alt=""></span>
+            <span class="galeryPictures"><img src="img/zabiegi2/4.jpg" alt=""></span>
+            <span class="galeryPictures"><img src="img/zabiegi2/5.jpg" alt=""></span>
+            <span class="galeryPictures"><img src="img/zabiegi2/6.jpg" alt=""></span>
+            <span class="galeryPictures"><img src="img/zabiegi2/7.jpg" alt=""></span>
+            <span class="galeryPictures"><img src="img/zabiegi2/8.jpg" alt=""></span>
+            <span class="galeryPictures"><img src="img/zabiegi2/9.jpg" alt=""></span>
+           
           </div>
         </div>
       </div>
