--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>AURORA Mobilny Gabinet Kosmeyczny</title>
   <link rel="stylesheet" href="css/fontello.css" type="text/css" />
+  <link href="dist/css/lightbox.css" rel="stylesheet" />
   <link rel="stylesheet" href="css/style_main.css" type="text/css" />
   <link rel="stylesheet" href="css/style_nav.css" type="text/css" />
   <link rel="stylesheet" href="css/style_about_me.css" type="text/css" />
@@ -13,6 +14,7 @@
   <link rel="stylesheet" href="css/style_services.css" type="text/css" />
   <link rel="stylesheet" href="css/style_price.css" type="text/css" />
   <link rel="stylesheet" href="css/style_footer.css" type="text/css" />
+  
   <link href="https://fonts.googleapis.com/css?family=Rajdhani&display=swap&subset=latin-ext" rel="stylesheet">
   <style>
   </style>
@@ -22,7 +24,7 @@
 
 
 <body id="main">
-  <main>
+  <section>
     <aside>
 
       <img src="img/logo_270x50.png" alt="">
@@ -53,9 +55,9 @@
           </a></li>
       </ul>
     </nav>
-  </main>
+  </section>
 
-  <section>
+  <main>
     <div class="main_wraper">
  
     <span class="main_img">
@@ -115,50 +117,48 @@
         </div>
         <div class="galery">
           <div id="g2" class="galery_page_2 ggalery">
-            <span class="galeryPictures"><img src="img/zabiegi/1.jpg"  alt=""></span>
-            <span class="galeryPictures"><img src="img/zabiegi/2.jpg" alt=""></span>
-            <span class="galeryPictures"><img src="img/zabiegi/3.jpg" alt=""></span>
-            <span class="galeryPictures"><img src="img/zabiegi/4.jpg" alt=""></span>
-            <span class="galeryPictures"><img src="img/zabiegi/5.jpg" alt=""></span>
-            <span class="galeryPictures"><img src="img/zabiegi/6.jpg" alt=""></span>
-            <span class="galeryPictures"><img src="img/zabiegi/7.jpg" alt=""></span>
-            <span class="galeryPictures"><img src="img/zabiegi/8.jpg" alt=""></span>
-            <span class="galeryPictures"><img src="img/zabiegi/9.jpg" alt=""></span>
+            <a href="img/zabiegi/1.jpg"  data-lightbox="roadtrip"><img src="img/zabiegi/1.jpg"  alt=""></a>
+            <a href="img/zabiegi/2.jpg" data-lightbox="roadtrip"><img src="img/zabiegi/2.jpg" alt=""></a>
+            <a href="img/zabiegi/3.jpg" data-lightbox="roadtrip"><img src="img/zabiegi/3.jpg" alt=""></a>
+            <a href="img/zabiegi/4.jpg" data-lightbox="roadtrip"><img src="img/zabiegi/4.jpg" alt=""></a>
+            <a href="img/zabiegi/5.jpg" data-lightbox="roadtrip"><img src="img/zabiegi/5.jpg" alt=""></a>
+            <a href="img/zabiegi/6.jpg" data-lightbox="roadtrip"><img src="img/zabiegi/6.jpg" alt=""></a>
+            <a href="img/zabiegi/7.jpg" data-lightbox="roadtrip"><img src="img/zabiegi/7.jpg" alt=""></a>
+            <a href="img/zabiegi/8.jpg" data-lightbox="roadtrip"><img src="img/zabiegi/8.jpg" alt=""></a>
+            <a href="img/zabiegi/9.jpg" data-lightbox="roadtrip"><img src="img/zabiegi/9.jpg" alt=""></a>
           </div>
           <div id="g3" class="galery_page_3 ggalery">
-            <span class="galeryPictures"><img src="img/makijaze/1.jpg" alt=""></span>
-            <span class="galeryPictures"><img src="img/makijaze/2.jpg" alt=""></span>
-            <span class="galeryPictures"><img src="img/makijaze/3.jpg" alt=""></span>
-            <span class="galeryPictures"><img src="img/makijaze/4.jpg" alt=""></span>
-            <span class="galeryPictures"><img src="img/makijaze/5.jpg" alt=""></span>
-            <span class="galeryPictures"><img src="img/makijaze/6.jpg" alt=""></span>
-            <span class="galeryPictures"><img src="img/makijaze/7.jpg" alt=""></span>
-            <span class="galeryPictures"><img src="img/makijaze/8.jpg" alt=""></span>
-            <span class="galeryPictures"><img src="img/makijaze/9.jpg" alt=""></span>
+            <a href="img/makijaze/1.jpg"  data-lightbox="roadtrip"><img src="img/makijaze/1.jpg"  alt=""></a>
+            <a href="img/makijaze/2.jpg" data-lightbox="roadtrip"><img src="img/makijaze/2.jpg" alt=""></a>
+            <a href="img/makijaze/3.jpg" data-lightbox="roadtrip"><img src="img/makijaze/3.jpg" alt=""></a>
+            <a href="img/makijaze/4.jpg" data-lightbox="roadtrip"><img src="img/makijaze/4.jpg" alt=""></a>
+            <a href="img/makijaze/5.jpg" data-lightbox="roadtrip"><img src="img/makijaze/5.jpg" alt=""></a>
+            <a href="img/makijaze/6.jpg" data-lightbox="roadtrip"><img src="img/makijaze/6.jpg" alt=""></a>
+            <a href="img/makijaze/7.jpg" data-lightbox="roadtrip"><img src="img/makijaze/7.jpg" alt=""></a>
+            <a href="img/makijaze/8.jpg" data-lightbox="roadtrip"><img src="img/makijaze/8.jpg" alt=""></a>
+            <a href="img/makijaze/9.jpg" data-lightbox="roadtrip"><img src="img/makijaze/9.jpg" alt=""></a>
           </div>
           <div id="g4" class="galery_page_4 ggalery">
-            <span class="galeryPictures"><img src="img/sesje/1.jpg" alt=""></span>
-            <span class="galeryPictures"><img src="img/sesje/2.jpg" alt=""></span>
-            <span class="galeryPictures"><img src="img/sesje/3.jpg" alt=""></span>
-            <span class="galeryPictures"><img src="img/sesje/4.jpg" alt=""></span>
-            <span class="galeryPictures"><img src="img/sesje/5.jpg" alt=""></span>
-            <span class="galeryPictures"><img src="img/sesje/6.jpg" alt=""></span>
-            <span class="galeryPictures"><img src="img/sesje/7.jpg" alt=""></span>
-            <span class="galeryPictures"><img src="img/sesje/8.jpg" alt=""></span>
-            <span class="galeryPictures"><img src="img/sesje/9.jpg" alt=""></span>
-            
+            <a href="img/sesje/1.jpg"  data-lightbox="roadtrip"><img src="img/sesje/1.jpg"  alt=""></a>
+            <a href="img/sesje/2.jpg" data-lightbox="roadtrip"><img src="img/sesje/2.jpg" alt=""></a>
+            <a href="img/sesje/3.jpg" data-lightbox="roadtrip"><img src="img/sesje/3.jpg" alt=""></a>
+            <a href="img/sesje/4.jpg" data-lightbox="roadtrip"><img src="img/sesje/4.jpg" alt=""></a>
+            <a href="img/sesje/5.jpg" data-lightbox="roadtrip"><img src="img/sesje/5.jpg" alt=""></a>
+            <a href="img/sesje/6.jpg" data-lightbox="roadtrip"><img src="img/sesje/6.jpg" alt=""></a>
+            <a href="img/sesje/7.jpg" data-lightbox="roadtrip"><img src="img/sesje/7.jpg" alt=""></a>
+            <a href="img/sesje/8.jpg" data-lightbox="roadtrip"><img src="img/sesje/8.jpg" alt=""></a>
+            <a href="img/sesje/9.jpg" data-lightbox="roadtrip"><img src="img/sesje/9.jpg" alt=""></a>
           </div>
           <div id="g1" class="galery_page_1  ggalery ggalery_default">
-            <span class="galeryPictures"><img src="img/zabiegi2/1.jpg" alt=""></span>
-            <span class="galeryPictures"><img src="img/zabiegi2/2.jpg" alt=""></span>
-            <span class="galeryPictures"><img src="img/zabiegi2/3.jpg" alt=""></span>
-            <span class="galeryPictures"><img src="img/zabiegi2/4.jpg" alt=""></span>
-            <span class="galeryPictures"><img src="img/zabiegi2/5.jpg" alt=""></span>
-            <span class="galeryPictures"><img src="img/zabiegi2/6.jpg" alt=""></span>
-            <span class="galeryPictures"><img src="img/zabiegi2/7.jpg" alt=""></span>
-            <span class="galeryPictures"><img src="img/zabiegi2/8.jpg" alt=""></span>
-            <span class="galeryPictures"><img src="img/zabiegi2/9.jpg" alt=""></span>
-           
+            <a href="img/zabiegi2/1.jpg"  data-lightbox="roadtrip"><img src="img/zabiegi2/1.jpg"  alt=""></a>
+            <a href="img/zabiegi2/2.jpg" data-lightbox="roadtrip"><img src="img/zabiegi2/2.jpg" alt=""></a>
+            <a href="img/zabiegi2/3.jpg" data-lightbox="roadtrip"><img src="img/zabiegi2/3.jpg" alt=""></a>
+            <a href="img/zabiegi2/4.jpg" data-lightbox="roadtrip"><img src="img/zabiegi2/4.jpg" alt=""></a>
+            <a href="img/zabiegi2/5.jpg" data-lightbox="roadtrip"><img src="img/zabiegi2/5.jpg" alt=""></a>
+            <a href="img/zabiegi2/6.jpg" data-lightbox="roadtrip"><img src="img/zabiegi2/6.jpg" alt=""></a>
+            <a href="img/zabiegi2/7.jpg" data-lightbox="roadtrip"><img src="img/zabiegi2/7.jpg" alt=""></a>
+            <a href="img/zabiegi2/8.jpg" data-lightbox="roadtrip"><img src="img/zabiegi2/8.jpg" alt=""></a>
+            <a href="img/zabiegi2/9.jpg" data-lightbox="roadtrip"><img src="img/zabiegi2/9.jpg" alt=""></a>
           </div>
         </div>
       </div>
@@ -781,7 +781,7 @@
 
 
     </div>
-  </section>
+  </main>
   <footer id="footer">
     <div class="footer_wraper">
       <div class="footer_adress">
@@ -821,6 +821,7 @@
     </div>
   </footer>
   <script src="scripts/script.js" ></script>
+  <script src="dist/js/lightbox-plus-jquery.js"></script>
 </body>
 
 </html>
